# digit-dp-lib

./: README.md  digit-dp-lib.opam  dune-project  pack.py
.github/workflows/: workflow.yml
src/: automaton.ml  automaton.mli  automatonDP.ml  automatonDP.mli  digitDP.ml  digitDP.mli  dune  listExt.ml  math.ml  monoid.ml  nat.ml
test/: automatonDP.ml  digitDP.ml  dune  forbidden_number.ml  unfair_nim.ml  zigzag_numbers.ml
